# pyceptron

./: .gitignore  README.md  pyproject.toml
examples/: 1_lineal.ipynb  2_circle.ipynb  3_spiral.ipynb
examples/data/: circle.csv  spiral.csv
pyceptron/: __init__.py  networks.py
tests/: test_dlp.py  test_mlp.py  test_slp.py
