[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyceptron"
version = "0.1.0"
description = "Artificial Neural Network as a Multi-Layer Perceptron"
authors = [{ name = "Pablo Garcia" }, { email = "pablofueros@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12.0"
license = "MIT"

dependencies = ["numpy"]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]
examples = ["ipykernel", "pandas", "matplotlib"]

[project.urls]
Repository = "https://github.com/pablofueros/pyceptron"
